--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "inngest": "^3.44.4",
     "mongoose": "^8.19.2",
-    "stream-chat": "^8.60.0"
+    "stream-chat": "^8.60.0",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
